[gd_scene load_steps=22 format=2]

[ext_resource path="res://assets/interface/shopping/vertical_list.png" type="Texture" id=1]
[ext_resource path="res://assets/interface/shopping/npc_container.png" type="Texture" id=2]
[ext_resource path="res://assets/interface/shopping/amount_text.png" type="Texture" id=3]
[ext_resource path="res://scenes/interface/shopping/sell_item_container.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/interface/shopping/big_button.png" type="Texture" id=5]
[ext_resource path="res://scripts/interface/sell_container/right_container.gd" type="Script" id=6]
[ext_resource path="res://scripts/interface/sell_container.gd" type="Script" id=7]
[ext_resource path="res://assets/interface/shopping/close_button.png" type="Texture" id=8]
[ext_resource path="res://assets/font/thaleah_fat.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://assets/interface/shopping/gold_coin_text.png" type="Texture" id=10]
[ext_resource path="res://scripts/interface/sell_container/left_container.gd" type="Script" id=11]

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 9 )

[sub_resource type="StyleBoxTexture" id=8]
margin_right = 17.2269

[sub_resource type="StyleBoxTexture" id=9]

[sub_resource type="StyleBoxTexture" id=10]

[sub_resource type="StyleBoxTexture" id=11]

[sub_resource type="StyleBoxTexture" id=12]

[sub_resource type="Theme" id=13]
VScrollBar/styles/grabber = SubResource( 8 )
VScrollBar/styles/grabber_highlight = SubResource( 9 )
VScrollBar/styles/grabber_pressed = SubResource( 10 )
VScrollBar/styles/scroll = SubResource( 11 )
VScrollBar/styles/scroll_focus = SubResource( 12 )

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:mouse_filter")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 2 ]
}

[sub_resource type="Animation" id=7]
resource_name = "hide_container"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:mouse_filter")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}

[sub_resource type="Animation" id=5]
resource_name = "show_container"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:mouse_filter")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 2, 0 ]
}

[node name="SellContainer" type="Control"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 7 )

[node name="LeftContainerBackground" type="TextureRect" parent="."]
margin_left = 10.0
margin_top = 10.0
margin_right = 170.0
margin_bottom = 74.0
texture = ExtResource( 2 )
script = ExtResource( 11 )
sell_container = NodePath("..")

[node name="ItemTexture" type="TextureRect" parent="LeftContainerBackground"]
margin_left = 11.5
margin_top = 16.0
margin_right = 43.5
margin_bottom = 48.0
rect_min_size = Vector2( 16, 16 )

[node name="AmountTexture" type="TextureRect" parent="LeftContainerBackground"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -33.0
margin_top = 4.0
margin_right = 6.0
margin_bottom = 10.0
texture = ExtResource( 3 )

[node name="AmountValue" type="Label" parent="LeftContainerBackground"]
margin_left = 87.0
margin_top = 31.0
margin_right = 122.0
margin_bottom = 46.0
rect_min_size = Vector2( 35, 0 )
custom_fonts/font = SubResource( 3 )
text = "-"
valign = 1

[node name="SellValue" type="Label" parent="LeftContainerBackground"]
margin_left = 42.0
margin_top = 21.0
margin_right = 77.0
margin_bottom = 36.0
rect_min_size = Vector2( 35, 0 )
custom_fonts/font = SubResource( 3 )
text = "-"
align = 2
valign = 1

[node name="GoldCoinTexture" type="TextureRect" parent="LeftContainerBackground"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -3.0
margin_top = -6.0
margin_right = 14.0
texture = ExtResource( 10 )

[node name="RightContainerBackground" type="TextureRect" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -106.0
margin_top = -170.0
margin_right = -10.0
margin_bottom = -10.0
texture = ExtResource( 1 )
script = ExtResource( 6 )
sell_button = NodePath("../SellButton")
left_container = NodePath("../LeftContainerBackground")
sell_container = NodePath("..")

[node name="Container" type="ScrollContainer" parent="RightContainerBackground"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -36.0
margin_top = -65.0
margin_right = 36.0
margin_bottom = 65.0
theme = SubResource( 13 )

[node name="HContainer" type="HBoxContainer" parent="RightContainerBackground/Container"]
margin_right = 10.0
custom_constants/separation = 0

[node name="Margin" type="Control" parent="RightContainerBackground/Container/HContainer"]
margin_right = 10.0
rect_min_size = Vector2( 10, 0 )

[node name="VContainer" type="VBoxContainer" parent="RightContainerBackground/Container/HContainer"]
margin_left = 10.0
margin_right = 10.0

[node name="ItemContainer1" parent="RightContainerBackground/Container/HContainer/VContainer" instance=ExtResource( 4 )]

[node name="ItemContainer2" parent="RightContainerBackground/Container/HContainer/VContainer" instance=ExtResource( 4 )]
margin_top = 20.0
margin_bottom = 36.0

[node name="ItemContainer3" parent="RightContainerBackground/Container/HContainer/VContainer" instance=ExtResource( 4 )]
margin_top = 40.0
margin_bottom = 56.0

[node name="ItemContainer4" parent="RightContainerBackground/Container/HContainer/VContainer" instance=ExtResource( 4 )]
margin_top = 60.0
margin_bottom = 76.0

[node name="ItemContainer5" parent="RightContainerBackground/Container/HContainer/VContainer" instance=ExtResource( 4 )]
margin_top = 80.0
margin_bottom = 96.0

[node name="ItemContainer6" parent="RightContainerBackground/Container/HContainer/VContainer" instance=ExtResource( 4 )]
margin_top = 100.0
margin_bottom = 116.0

[node name="ItemContainer7" parent="RightContainerBackground/Container/HContainer/VContainer" instance=ExtResource( 4 )]
margin_top = 120.0
margin_bottom = 136.0

[node name="ItemContainer8" parent="RightContainerBackground/Container/HContainer/VContainer" instance=ExtResource( 4 )]
margin_top = 140.0
margin_bottom = 156.0

[node name="ItemContainer9" parent="RightContainerBackground/Container/HContainer/VContainer" instance=ExtResource( 4 )]
margin_top = 160.0
margin_bottom = 176.0

[node name="ItemContainer10" parent="RightContainerBackground/Container/HContainer/VContainer" instance=ExtResource( 4 )]
margin_top = 180.0
margin_bottom = 196.0

[node name="ItemContainer11" parent="RightContainerBackground/Container/HContainer/VContainer" instance=ExtResource( 4 )]
margin_top = 200.0
margin_bottom = 216.0

[node name="ItemContainer12" parent="RightContainerBackground/Container/HContainer/VContainer" instance=ExtResource( 4 )]
margin_top = 220.0
margin_bottom = 236.0

[node name="ItemContainer13" parent="RightContainerBackground/Container/HContainer/VContainer" instance=ExtResource( 4 )]
margin_top = 240.0
margin_bottom = 256.0

[node name="ItemContainer14" parent="RightContainerBackground/Container/HContainer/VContainer" instance=ExtResource( 4 )]
margin_top = 260.0
margin_bottom = 276.0

[node name="ItemContainer15" parent="RightContainerBackground/Container/HContainer/VContainer" instance=ExtResource( 4 )]
margin_top = 280.0
margin_bottom = 296.0

[node name="ItemContainer16" parent="RightContainerBackground/Container/HContainer/VContainer" instance=ExtResource( 4 )]
margin_top = 300.0
margin_bottom = 316.0

[node name="ItemContainer17" parent="RightContainerBackground/Container/HContainer/VContainer" instance=ExtResource( 4 )]
margin_top = 320.0
margin_bottom = 336.0

[node name="ItemContainer18" parent="RightContainerBackground/Container/HContainer/VContainer" instance=ExtResource( 4 )]
margin_top = 340.0
margin_bottom = 356.0

[node name="ItemContainer19" parent="RightContainerBackground/Container/HContainer/VContainer" instance=ExtResource( 4 )]
margin_top = 360.0
margin_bottom = 376.0

[node name="ItemContainer20" parent="RightContainerBackground/Container/HContainer/VContainer" instance=ExtResource( 4 )]
margin_top = 380.0
margin_bottom = 396.0

[node name="ItemContainer21" parent="RightContainerBackground/Container/HContainer/VContainer" instance=ExtResource( 4 )]
margin_top = 400.0
margin_bottom = 416.0

[node name="ItemContainer22" parent="RightContainerBackground/Container/HContainer/VContainer" instance=ExtResource( 4 )]
margin_top = 420.0
margin_bottom = 436.0

[node name="ItemContainer23" parent="RightContainerBackground/Container/HContainer/VContainer" instance=ExtResource( 4 )]
margin_top = 440.0
margin_bottom = 456.0

[node name="ItemContainer24" parent="RightContainerBackground/Container/HContainer/VContainer" instance=ExtResource( 4 )]
margin_top = 460.0
margin_bottom = 476.0

[node name="ItemContainer25" parent="RightContainerBackground/Container/HContainer/VContainer" instance=ExtResource( 4 )]
margin_top = 480.0
margin_bottom = 496.0

[node name="ItemContainer26" parent="RightContainerBackground/Container/HContainer/VContainer" instance=ExtResource( 4 )]
margin_top = 500.0
margin_bottom = 516.0

[node name="ItemContainer27" parent="RightContainerBackground/Container/HContainer/VContainer" instance=ExtResource( 4 )]
margin_top = 520.0
margin_bottom = 536.0

[node name="BackButton" type="TextureButton" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 159.0
margin_top = -174.0
margin_right = 173.0
margin_bottom = -160.0
texture_normal = ExtResource( 8 )

[node name="SellButton" type="TextureButton" parent="."]
visible = false
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -161.0
margin_top = -28.0
margin_right = -147.0
margin_bottom = -14.0
texture_normal = ExtResource( 5 )

[node name="Animation" type="AnimationPlayer" parent="."]
autoplay = "show_container"
anims/RESET = SubResource( 6 )
anims/hide_container = SubResource( 7 )
anims/show_container = SubResource( 5 )
